[project]
name = "patera"
version = "0.111.13"
description = "A batteries included async-first python webframework"
readme = "README.md"
authors = [
    { name = "MarkoSterk", email = "marko_sterk@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "asgi-lifespan>=2.1.0",
    "granian>=2.7.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "idna>=3.11",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mako>=1.3.10",
    "markupsafe>=3.0.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "websockets>=16.0",
    "werkzeug>=3.1.6",
]

[project.optional-dependencies]
admin = ["patera-admin"]
aiinterface = ["patera-aiinterface"]
auth = ["patera-auth"]
caching = ["patera-caching"]
caching-redis = ["patera-caching[redis]"]
caching-sqlite = ["patera-caching[sqlite]"]
database = ["patera-database"]
email = ["patera-email"]
frontend = ["patera-frontendext", "patera-frontend"]
statemachine = ["patera-statemachine"]
taskmanager = ["patera-taskmanager"]
testing = ["httpx", "anyio", "pytest", "pytest-cov"]
dev = ["granian[reload]"]
all = [
    "patera-database",
    "patera-email",
    "patera-admin",
    "patera-aiinterface",
    "patera-auth",
    "patera-caching",
    "patera-statemachine",
    "patera-taskmanager"
]

[tool.uv.workspace]
members = [
    "packages/patera-admin",
    "packages/patera-aiinterface",
    "packages/patera-auth",
    "packages/patera-caching",
    "packages/patera-database",
    "packages/patera-pyway",
    "packages/patera-email",
    "packages/patera-frontend",
    "packages/patera-frontendext",
    "packages/patera-statemachine",
    "packages/patera-taskmanager"
]

[tool.uv.sources]
patera-admin = { workspace = true }
patera-aiinterface = { workspace = true }
patera-auth = { workspace = true }
patera-caching = { workspace = true }
patera-database = { workspace = true }
patera-pyway = { workspace = true }
patera-email = { workspace = true }
patera-frontend = { workspace = true }
patera-frontendext = { workspace = true }
patera-statemachine = { workspace = true }
patera-taskmanager = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.scripts]
patera = "patera.cli:main"

[project.urls]
Homepage = "https://github.com/MarkoSterk/Patera"
Issues = "https://github.com/MarkoSterk/Patera/issues"

[tool.pylint]
# Global Pylint configuration

[tool.pylint."messages control"]
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.mypy]
disable_error_code = ["import-untyped"]
exclude = [
    "src/patera/cli/templates",
    "src/patera/database/sql/migrate/env_template.py"
    ]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
